--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ pandas==2.2.1
 reportlab==4.1.0
 qrcode==7.4.2
 Werkzeug==3.0.1
-email-validator==2.1.0.post1 
+email-validator==2.1.0.post1
+gunicorn==21.2.0 
